01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: netmaker
  labels:
    networking/namespace: netmaker
