05-ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nm-api-ingress-nginx-tls
  namespace: netmaker
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`api.NETMAKER_BASE_DOMAIN`)
    kind: Rule
    services:
    - name: netmaker-api
      port: 8081
  tls:
    certResolver: cloudflare-prod

---
# Disable auto-detection
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: autodetect
  namespace: netmaker
spec:
  contentType:
    autoDetect: false

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nm-grpc-ingress-nginx-tls
  namespace: netmaker
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`grpc.NETMAKER_BASE_DOMAIN`)
    kind: Rule
    services:
    - name: netmaker-grpc
      port: 50051
      kind: Service
      scheme: h2c
    middlewares:
    - name: autodetect
  tls:
    certResolver: cloudflare-prod




---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nm-ui-ingress-nginx-tls
  namespace: netmaker
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`dashboard.NETMAKER_BASE_DOMAIN`)
    kind: Rule
    services:
    - name: netmaker-ui
      port: 80
  tls:
    certResolver: cloudflare-prod
